@@ -2,6 +2,7 @@
 
 * Rename platform to ruby_platform
 * Rename environment to env
+* Add encoding_list and encoding_aliases (Encoding.name_list and Encoding.aliases)
 * Add gc (GC.stat)
 * Add user_home (Dir.home)
 * Add ruby_revision and ruby_copyright (RUBY_REVISION and RUBY_COPYRIGHT)
